; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/mtip32xx/extr_mtip32xx.c_mtip_issue_non_ncq_command.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/mtip32xx/extr_mtip32xx.c_mtip_issue_non_ncq_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtip_port = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtip_port*, i32)* @mtip_issue_non_ncq_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtip_issue_non_ncq_command(%struct.mtip_port* %0, i32 %1) #0 {
  %3 = alloca %struct.mtip_port*, align 8
  %4 = alloca i32, align 4
  store %struct.mtip_port* %0, %struct.mtip_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @MTIP_TAG_BIT(i32 %5)
  %7 = shl i32 1, %6
  %8 = load %struct.mtip_port*, %struct.mtip_port** %3, align 8
  %9 = getelementptr inbounds %struct.mtip_port, %struct.mtip_port* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @MTIP_TAG_INDEX(i32 %11)
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @writel(i32 %7, i32 %14)
  ret void
}

declare dso_local i32 @writel(i32, i32) #1

declare dso_local i32 @MTIP_TAG_BIT(i32) #1

declare dso_local i64 @MTIP_TAG_INDEX(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
